# fad

./: .gitignore  README.md  overview.dot  overview.map  pyproject.toml  quick_install.sh  workflow.md
demos/align/1_basic/: for-nim-person.py  run_demo.py
demos/align/1_basic/faces-aligned/: landmarks.txt
demos/align/2_morph/: run_demo.py
demos/align/2_morph/an-unusual-pair/: landmarks.txt
demos/align/2_morph/an-unusual-pair-aligned/: landmarks.txt
demos/align/2_morph/an-unusual-pair-aligned-morphed/: landmarks.txt
demos/align/3_average/: run_demo.py
demos/features/: README.md  demo_averages.py  demo_morphs.py  fig-demos.key  five_manipulations.py  run_demos.py  spacing_movie.py
demos/features/FRL-LS/: landmarks.txt
demos/features/FRL-LS-aligned/: landmarks.txt
demos/features/FRL-LS-aligned-morphed/: landmarks.txt
demos/features/FRL-LS-aligned-morphed-aligned/: landmarks.txt
demos/features/faces-of-merkel/: landmarks.txt
demos/features/faces-of-merkel-aligned/: landmarks.txt
demos/features/faces-of-merkel-aligned-warp-to-mean/: landmarks.txt
demos/features/faces-of-merkel-aligned-warp-to-mean-aligned/: landmarks.txt  specs.csv
manuscript/: manuscript-gaspar-garrod-brm-2024.docx
results/: methods_features.py  results_features_1.py
results/friends/: landmarks.txt  sources.md
results/friends-aligned/: landmarks.txt  specs.csv
src/fad/: ensemble.py
src/fad/align/: __init__.py  face_landmarks.py  make_aligned_faces.py  make_files.py
src/fad/features/: coefficients.py  filters.py  reconstruct.py  roi.py  shift_features.py
(+7 files in other folders)
